--- a/amplify/assets/email-templates/auth/CustomMessage_SignUp.html
+++ b/amplify/assets/email-templates/auth/CustomMessage_SignUp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eposta adresini doğrula - Dönüştür</title>
+    <title>Eposta adresini doğrula</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap');
 
